--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
     "hammerjs": "^2.0.8",
+    "ng-push-notification": "^1.1.0",
     "ngx-clipboard": "^10.0.0",
     "rxjs": "^5.5.10",
     "zone.js": "^0.8.19"
