Add template environment files. In order to build the project and get it running those should be supplied with own data. Also the *.temple* from the file name needs to be removed.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Exclude actual environment files
+/src/environments/*.ts
+!/src/environments/*.template.ts
