--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
     "hammerjs": "^2.0.8",
+    "imdb-api": "^3.1.2",
+    "localforage": "^1.7.1",
+    "lodash": "^4.17.10",
+    "ng-imgcache": "^1.0.1",
     "ng-push-notification": "^1.1.0",
     "ngx-clipboard": "^10.0.0",
     "rxjs": "^5.5.10",
