--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poll-a-lot",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -13,49 +13,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@angular/service-worker": "^5.2.10",
-    "angularfire2": "^5.0.0-rc.6.0",
-    "core-js": "^2.4.1",
-    "firebase": "^4.12.1",
+    "@angular/animations": "^8.2.6",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.2.6",
+    "@angular/compiler": "^8.2.6",
+    "@angular/core": "^8.2.6",
+    "@angular/forms": "^8.2.6",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.2.6",
+    "@angular/platform-browser-dynamic": "^8.2.6",
+    "@angular/platform-server": "^8.2.6",
+    "@angular/router": "^8.2.6",
+    "@angular/service-worker": "^8.2.6",
+    "angularfire2": "^5.2.1",
+    "core-js": "^3.2.1",
+    "firebase": "^6.0.0",
     "hammerjs": "^2.0.8",
     "imdb-api": "^3.1.2",
-    "localforage": "^1.7.1",
-    "lodash": "^4.17.10",
-    "ng-imgcache": "^1.0.1",
+    "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "ng-push-notification": "^1.1.0",
-    "ngx-clipboard": "^10.0.0",
-    "rxjs": "^5.5.10",
-    "zone.js": "^0.8.19"
+    "ngx-clipboard": "^12.0.0",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "@angular-devkit/build-angular": "^0.803.4",
+    "@angular/cli": "^8.3.4",
+    "@angular/compiler-cli": "^8.2.6",
+    "@angular/language-service": "^8.2.6",
+    "@types/jasmine": "^3.4.0",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^12.7.5",
+    "codelyzer": "^5.1.0",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "tslint": "^5.20.0",
+    "typescript": "~3.5.0",
+    "webpack": "^4.40.2"
   }
 }
