Work on the full sreen mode on desktop and update on service worker. Udpates should now register more easily.

--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -77,7 +77,8 @@
         "sizes": "512x512",
         "type": "image/png"
       }],
-  "start_url": "index.html",
+  "scope": "/",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#FFE29F",
