--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^8.2.6",
     "@angular/platform-browser-dynamic": "^8.2.6",
     "@angular/platform-server": "^8.2.6",
+    "@angular/pwa": "^0.803.4",
     "@angular/router": "^8.2.6",
     "@angular/service-worker": "^8.2.6",
     "angularfire2": "^5.2.1",
