--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   "dependencies": {
     "@angular-devkit/schematics": "^13.2.6",
     "@angular/animations": "^9.1.13",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "^9.1.13",
     "@angular/compiler": "^9.1.13",
     "@angular/core": "^9.1.13",
     "@angular/forms": "^9.1.13",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.13",
     "@angular/platform-browser-dynamic": "^9.1.13",
     "@angular/platform-server": "^9.1.13",
     "@angular/router": "^9.1.13",
     "@angular/service-worker": "^9.1.13",
+    "@schematics/angular": "^13.2.6",
     "angularfire2": "^5.3.0",
     "core-js": "^3.6.4",
     "firebase": "^6.6.2",
