--- a/package.json
+++ b/package.json
@@ -14,24 +14,23 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^13.2.6",
-    "@angular/animations": "^10.2.5",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
-    "@angular/forms": "^10.2.5",
+    "@angular/animations": "^11.2.14",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/platform-server": "^10.2.5",
-    "@angular/router": "^10.2.5",
-    "@angular/service-worker": "^10.2.5",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/platform-server": "^11.2.14",
+    "@angular/router": "^11.2.14",
+    "@angular/service-worker": "^11.2.14",
     "@schematics/angular": "^13.2.6",
     "angularfire2": "^5.3.0",
     "core-js": "^3.6.4",
     "firebase": "^6.6.2",
-    "hammerjs": "^2.0.8",
     "imdb-api": "^3.1.2",
     "localforage": "^1.7.3",
     "lodash": "^4.17.21",
@@ -43,17 +42,17 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.4",
-    "@angular/cli": "^10.2.4",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/language-service": "^10.2.5",
-    "@types/jasmine": "^3.5.0",
+    "@angular-devkit/build-angular": "~0.1102.18",
+    "@angular/cli": "^11.2.18",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.17",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
