Update packages and fix compability issues.

--- a/package.json
+++ b/package.json
@@ -14,37 +14,38 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^13.2.6",
-    "@angular/animations": "^12.2.16",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "^12.2.16",
-    "@angular/compiler": "^12.2.16",
-    "@angular/core": "^12.2.16",
-    "@angular/forms": "^12.2.16",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "^12.2.16",
-    "@angular/platform-browser-dynamic": "^12.2.16",
-    "@angular/platform-server": "^12.2.16",
-    "@angular/router": "^12.2.16",
-    "@angular/service-worker": "^12.2.16",
+    "@angular/animations": "^13.2.6",
+    "@angular/cdk": "^13.2.6",
+    "@angular/common": "^13.2.6",
+    "@angular/compiler": "^13.2.6",
+    "@angular/core": "^13.2.6",
+    "@angular/forms": "^13.2.6",
+    "@angular/material": "^13.2.6",
+    "@angular/platform-browser": "^13.2.6",
+    "@angular/platform-browser-dynamic": "^13.2.6",
+    "@angular/platform-server": "^13.2.6",
+    "@angular/router": "^13.2.6",
+    "@angular/service-worker": "^13.2.6",
     "@schematics/angular": "^13.2.6",
-    "angularfire2": "^5.3.0",
+    "@angular/fire": "^7.2.0",
     "core-js": "^3.6.4",
-    "firebase": "^6.6.2",
-    "imdb-api": "^3.1.2",
-    "localforage": "^1.7.3",
+    "firebase": "^9.0.0",
+    "imdb-api": "^4.4.0",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "ng-push-notification": "^2.0.0",
-    "ngx-clipboard": "^12.3.0",
+    "ngx-clipboard": "^15.0.0",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/cli": "^12.2.16",
-    "@angular/compiler-cli": "^12.2.16",
-    "@angular/language-service": "^12.2.16",
+    "@angular-devkit/build-angular": "~13.2.6",
+    "@angular/cli": "^13.2.6",
+    "@angular/compiler-cli": "^13.2.6",
+    "@angular/language-service": "^13.2.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
@@ -61,7 +62,7 @@
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~4.1.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5",
-    "webpack": "^4.41.5"
+    "typescript": "~4.5.5",
+    "webpack": "^5.0.0"
   }
 }
