--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poll-a-lot",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -13,38 +13,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^15.2.9",
-    "@angular/animations": "^15.2.9",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/core": "^15.2.9",
-    "@angular/forms": "^15.2.9",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/platform-server": "^15.2.9",
-    "@angular/router": "^15.2.9",
-    "@angular/service-worker": "^15.2.9",
-    "@schematics/angular": "^15.2.9",
-    "@angular/fire": "^7.5.0",
+    "@angular-devkit/schematics": "^16.2.0",
+    "@angular/animations": "^16.2.2",
+    "@angular/cdk": "^16.2.1",
+    "@angular/common": "^16.2.2",
+    "@angular/compiler": "^16.2.2",
+    "@angular/core": "^16.2.2",
+    "@angular/fire": "^7.6.0",
+    "@angular/forms": "^16.2.2",
+    "@angular/material": "^16.2.1",
+    "@angular/platform-browser": "^16.2.2",
+    "@angular/platform-browser-dynamic": "^16.2.2",
+    "@angular/platform-server": "^16.2.2",
+    "@angular/router": "^16.2.2",
+    "@angular/service-worker": "^16.2.2",
+    "@schematics/angular": "^16.2.0",
     "core-js": "^3.6.4",
     "firebase": "^9.6.0",
     "imdb-api": "^4.4.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "ng2-charts": "^5.0.3",
     "ngx-clipboard": "^15.0.0",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.9",
-    "@angular/cli": "^15.2.9",
-    "@angular/compiler-cli": "^15.2.9",
-    "@angular/language-service": "^15.2.9",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.2",
+    "@angular/language-service": "^16.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
@@ -61,7 +62,7 @@
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~4.1.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.8.4",
+    "typescript": "~5.1.6",
     "webpack": "^5.0.0"
   }
 }
