--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "imdb-api": "^4.4.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "ng-swipe": "^2.0.1",
     "ng2-charts": "^5.0.3",
     "ngx-clipboard": "^15.0.0",
     "rxjs": "^6.5.4",
