--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,82 +1,92 @@
 {
   "name": "Poll-A-Lot",
   "short_name": "Poll-A-Lot",
-  "description": "The best way to create and share poll with your friends.",  
-  "icons": [{
-    "src": "apple-touch-icon-57x57.png",
-      "sizes": "57x57",
-      "type": "image/png"
+  "description": "The best way to create and share poll with your friends.",
+  "icons": [
+    {
+      "src": "/android-icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/png",
+      "density": "0.75"
     },
     {
-    "src": "apple-touch-icon-60x60.png",
-      "sizes": "60x60",
-      "type": "image/png"
+      "src": "/android-icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": "1.0"
     },
     {
-    "src": "apple-touch-icon-72x72.png",
-      "sizes": "57x57",
-      "type": "image/png"
+      "src": "/android-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "density": "1.5"
     },
     {
-    "src": "apple-touch-icon-72x72.png",
-      "sizes": "57x57",
-      "type": "image/png"
-    },
-    {
-    "src": "apple-touch-icon-76x76.png",
-      "sizes": "57x57",
-      "type": "image/png"
-    },
-    {
-    "src": "apple-touch-icon-114x114.png",
-      "sizes": "114x114",
-      "type": "image/png"
-    },
-    {
-    "src": "apple-touch-icon-120x120.png",
-      "sizes": "120x120",
-      "type": "image/png"
-    },
-    {
-    "src": "apple-touch-icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-    "src": "apple-touch-icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-    "src": "favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-    "src": "favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-    "src": "favicon-96x96.png",
+      "src": "/android-icon-96x96.png",
       "sizes": "96x96",
-      "type": "image/png"
+      "type": "image/png",
+      "density": "2.0"
     },
     {
-    "src": "favicon-128.png",
+      "src": "/android-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": "3.0"
+    },
+    {
+      "src": "/android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": "4.0"
+    },
+    {
+      "src": "/maskable_icon_x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/maskable_icon_x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/maskable_icon_x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/maskable_icon_x128.png",
       "sizes": "128x128",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-    "src": "favicon-196x196.png",
-      "sizes": "196x196",
-      "type": "image/png"
+      "src": "/maskable_icon_x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }],
+      "src": "/maskable_icon_x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/maskable_icon_x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/maskable_icon.png",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
   "scope": "/",
   "start_url": "/",
   "display": "standalone",
