--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/language-service": "^16.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
