--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@angular/router": "^16.2.2",
     "@angular/service-worker": "^16.2.2",
     "@schematics/angular": "^16.2.0",
+    "@types/emoji-flags": "^1.3.1",
     "core-js": "^3.6.4",
+    "emoji-flags": "^1.3.0",
     "firebase": "^9.6.0",
     "imdb-api": "^4.4.0",
     "localforage": "^1.10.0",
