--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.6.4",
     "emoji-flags": "^1.3.0",
     "firebase": "^9.6.0",
+    "hyphen": "^1.10.4",
     "imdb-api": "^4.4.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
