--- a/angular.json
+++ b/angular.json
@@ -16,14 +16,8 @@
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
-            "assets": [
-              "src/assets",
-              "src/manifest.json"
-            ],
-            "styles": [
-              "src/styles.scss",
-              "src/assets/styles/theme.scss"
-            ],
+            "assets": ["src/assets", "src/manifest.json"],
+            "styles": ["src/styles.scss", "src/assets/styles/theme.scss"],
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
@@ -63,6 +57,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "poll-a-lot:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -84,14 +79,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
-            "styles": [
-              "src/styles.scss",
-              "src/assets/styles/theme.scss"
-            ],
-            "assets": [
-              "src/assets",
-              "src/manifest.json"
-            ]
+            "styles": ["src/styles.scss", "src/assets/styles/theme.scss"],
+            "assets": ["src/assets", "src/manifest.json"]
           }
         }
       }
@@ -105,7 +94,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "poll-a-lot:serve",
+            "devServerTarget": "poll-a-lot:serve"
           }
         }
       }
