--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poll-a-lot",
-  "version": "3.6.0",
+  "version": "3.7.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -13,33 +13,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^16.2.0",
-    "@angular/animations": "^16.2.2",
+    "@angular-devkit/schematics": "^16.2.12",
+    "@angular/animations": "^16.2.12",
     "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.2.2",
-    "@angular/compiler": "^16.2.2",
-    "@angular/core": "^16.2.2",
-    "@angular/fire": "^7.6.0",
-    "@angular/forms": "^16.2.2",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.2.2",
-    "@angular/platform-browser-dynamic": "^16.2.2",
-    "@angular/platform-server": "^16.2.2",
-    "@angular/router": "^16.2.2",
-    "@angular/service-worker": "^16.2.2",
-    "@schematics/angular": "^16.2.0",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/fire": "^7.6.1",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.14",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/platform-server": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@angular/service-worker": "^16.2.12",
+    "@schematics/angular": "^16.2.12",
     "@types/emoji-flags": "^1.3.1",
     "core-js": "^3.6.4",
     "emoji-flags": "^1.3.0",
     "firebase": "^9.6.0",
+    "firebase-functions": "^4.7.0",
     "hyphen": "^1.10.4",
     "imdb-api": "^4.4.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "ng-lazyload-image": "^9.1.3",
     "ng-swipe": "^2.0.1",
-    "ng2-charts": "^5.0.3",
     "ngx-clipboard": "^15.0.0",
+    "rxfire": "^6.0.3",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^2.0.0",
@@ -47,15 +48,14 @@
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-devkit/build-angular": "^16.2.12",
     "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.2",
-    "@angular/language-service": "^16.2.2",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/lodash": "^4.14.199",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.17",
@@ -64,10 +64,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "rxjs-tslint": "^0.1.7",
     "ts-node": "~4.1.0",
-    "tslint": "~6.1.0",
     "typescript": "~5.1.6",
     "webpack": "^5.0.0"
   }
