Upgrade packages and refactor Firestore to user web modular api. Take App Check in use.

--- a/angular.json
+++ b/angular.json
@@ -56,8 +56,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "poll-a-lot:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "poll-a-lot:build"
           },
           "configurations": {
             "production": {
