--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
-    "@angular/fire": "^7.6.1",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.12",
     "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.12",
@@ -31,16 +31,14 @@
     "@types/emoji-flags": "^1.3.1",
     "core-js": "^3.6.4",
     "emoji-flags": "^1.3.0",
-    "firebase": "^9.6.0",
+    "firebase": "^10.6.0",
     "firebase-functions": "^4.7.0",
     "hyphen": "^1.10.4",
     "imdb-api": "^4.4.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "ng-lazyload-image": "^9.1.3",
-    "ng-swipe": "^2.0.1",
     "ngx-clipboard": "^15.0.0",
-    "rxfire": "^6.0.3",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^2.0.0",
@@ -56,7 +54,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/lodash": "^4.14.199",
     "@types/node": "^12.20.55",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.17",
     "karma-chrome-launcher": "~3.1.0",
