--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "axios": "^1.6.7",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.7.0"
+    "firebase-functions": "^4.7.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
