--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": true,
+            "allowedCommonJsDependencies": ["lodash"]
           },
           "configurations": {
             "production": {
