--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,7 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true,
-            "allowedCommonJsDependencies": ["lodash"]
+            "namedChunks": true
           },
           "configurations": {
             "production": {
