--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
     "outDir": "./dist/out-tsc",
+    "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
