Take Angular SSR into use

--- a/angular.json
+++ b/angular.json
@@ -19,14 +19,25 @@
             "polyfills": [
               "src/polyfills.ts"
             ],
-            "assets": ["src/assets", "src/manifest.json"],
-            "styles": ["src/styles.scss", "src/assets/styles/theme.scss"],
+            "assets": [
+              "src/assets",
+              "src/manifest.json"
+            ],
+            "styles": [
+              "src/styles.scss",
+              "src/assets/styles/theme.scss"
+            ],
             "scripts": [],
             "extractLicenses": false,
             "sourceMap": true,
             "optimization": false,
             "namedChunks": true,
-            "browser": "src/main.ts"
+            "browser": "src/main.ts",
+            "server": "src/main.server.ts",
+            "prerender": true,
+            "ssr": {
+              "entry": "server.ts"
+            }
           },
           "configurations": {
             "production": {
@@ -41,7 +52,6 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "serviceWorker": "ngsw-config.json",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
