--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --configuration production && firebase deploy"
+    "deploy": "ng build --configuration production && firebase deploy",
+    "serve:ssr:poll-a-lot": "node dist/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -27,10 +28,12 @@
     "@angular/platform-server": "^18.2.4",
     "@angular/router": "^18.2.4",
     "@angular/service-worker": "^18.2.4",
+    "@angular/ssr": "^18.2.4",
     "@schematics/angular": "^18.2.4",
     "@types/emoji-flags": "^1.3.1",
     "core-js": "^3.6.4",
     "emoji-flags": "^1.3.0",
+    "express": "^4.18.2",
     "firebase": "^10.6.0",
     "firebase-functions": "^4.7.0",
     "hyphen": "^1.10.4",
@@ -48,9 +51,10 @@
     "@angular/cli": "^18.2.4",
     "@angular/compiler-cli": "^18.2.4",
     "@angular/language-service": "^18.2.4",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.20.55",
+    "@types/node": "^18.18.0",
     "jasmine-core": "^4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.17",
