--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,11 +3,15 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "types": []
+    "types": [
+      "node"
+    ]
   },
   "files": [
     "main.ts",
-    "polyfills.ts"
+    "polyfills.ts",
+    "main.server.ts",
+    "../server.ts"
   ],
   "include": [
     "src/**/*.d.ts"
