--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poll-a-lot",
-  "version": "4.2.1",
+  "version": "4.2.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -40,6 +40,7 @@
     "imdb-api": "^4.4.0",
     "localforage": "^1.10.0",
     "localstorage-polyfill": "^1.0.1",
+    "lodash.isequal": "^4.5.0",
     "ng-lazyload-image": "^9.1.3",
     "ngx-clipboard": "^15.0.0",
     "rxjs": "^7.4.0",
