--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poll-a-lot",
-  "version": "4.5.1",
+  "version": "5.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -41,8 +41,10 @@
     "localforage": "^1.10.0",
     "localstorage-polyfill": "^1.0.1",
     "lodash.isequal": "^4.5.0",
+    "marked": "^12.0.2",
     "ng-lazyload-image": "^9.1.3",
     "ngx-clipboard": "^15.0.0",
+    "ngx-markdown": "^18.1.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
