--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^18.2.4",
-    "@angular/animations": "^19.2.15",
+    "@angular-devkit/schematics": "^20.3.2",
+    "@angular/animations": "^20.3.1",
     "@angular/cdk": "^19.2.19",
-    "@angular/common": "^19.2.15",
-    "@angular/compiler": "^19.2.15",
-    "@angular/core": "^19.2.15",
-    "@angular/fire": "^18.0.1",
-    "@angular/forms": "^19.2.15",
+    "@angular/common": "^20.3.1",
+    "@angular/compiler": "^20.3.1",
+    "@angular/core": "^20.3.1",
+    "@angular/fire": "^20.0.0",
+    "@angular/forms": "^20.3.1",
     "@angular/material": "^19.2.19",
-    "@angular/platform-browser": "^19.2.15",
-    "@angular/platform-browser-dynamic": "^19.2.15",
-    "@angular/platform-server": "^19.2.15",
-    "@angular/router": "^19.2.15",
-    "@angular/service-worker": "^19.2.15",
-    "@angular/ssr": "^18.2.4",
+    "@angular/platform-browser": "^20.3.1",
+    "@angular/platform-browser-dynamic": "^20.3.1",
+    "@angular/platform-server": "^20.3.1",
+    "@angular/router": "^20.3.1",
+    "@angular/service-worker": "^20.3.1",
+    "@angular/ssr": "^20.3.2",
     "@schematics/angular": "^18.2.4",
     "@types/emoji-flags": "^1.3.1",
     "core-js": "^3.6.4",
@@ -51,24 +51,24 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.17",
-    "@angular/cli": "^19.2.17",
-    "@angular/compiler-cli": "^19.2.15",
-    "@angular/language-service": "^19.2.15",
+    "@angular/build": "^20.3.2",
+    "@angular/cli": "^20.3.2",
+    "@angular/compiler-cli": "^20.3.1",
+    "@angular/language-service": "^20.3.1",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^18.18.0",
     "jasmine-core": "^4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.17",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "ts-node": "~4.1.0",
-    "typescript": "~5.5.4",
+    "typescript": "~5.9.2",
     "webpack": "^5.0.0"
   }
 }
