--- a/package.json
+++ b/package.json
@@ -14,61 +14,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^20.3.2",
-    "@angular/animations": "^20.3.1",
-    "@angular/cdk": "^19.2.19",
-    "@angular/common": "^20.3.1",
-    "@angular/compiler": "^20.3.1",
-    "@angular/core": "^20.3.1",
-    "@angular/fire": "^20.0.0",
-    "@angular/forms": "^20.3.1",
-    "@angular/material": "^19.2.19",
-    "@angular/platform-browser": "^20.3.1",
-    "@angular/platform-browser-dynamic": "^20.3.1",
-    "@angular/platform-server": "^20.3.1",
-    "@angular/router": "^20.3.1",
-    "@angular/service-worker": "^20.3.1",
-    "@angular/ssr": "^20.3.2",
-    "@schematics/angular": "^18.2.4",
-    "@types/emoji-flags": "^1.3.1",
-    "core-js": "^3.6.4",
-    "emoji-flags": "^1.3.0",
-    "express": "^4.18.2",
-    "firebase": "^10.12.0",
-    "firebase-functions": "^6.0.0",
-    "hyphen": "^1.10.4",
-    "imdb-api": "^4.4.0",
-    "localforage": "^1.10.0",
-    "localstorage-polyfill": "^1.0.1",
-    "lodash.isequal": "^4.5.0",
-    "marked": "^12.0.2",
-    "ng-lazyload-image": "^9.1.3",
-    "ngx-clipboard": "^15.0.0",
-    "ngx-markdown": "^18.1.0",
-    "rxjs": "^7.4.0",
-    "tslib": "^2.0.0",
-    "uuid": "^8.3.2",
+    "@angular-devkit/schematics": "20.3.1",
+    "@angular/animations": "20.3.1",
+    "@angular/cdk": "20.2.8",
+    "@angular/common": "20.3.1",
+    "@angular/compiler": "20.3.1",
+    "@angular/core": "20.3.1",
+    "@angular/fire": "20.0.1",
+    "@angular/forms": "20.3.1",
+    "@angular/material": "20.2.8",
+    "@angular/platform-browser": "20.3.1",
+    "@angular/platform-browser-dynamic": "20.3.1",
+    "@angular/platform-server": "20.3.1",
+    "@angular/router": "20.3.1",
+    "@angular/service-worker": "20.3.1",
+    "@angular/ssr": "20.3.5",
+    "@schematics/angular": "20.3.1",
+    "@types/emoji-flags": "1.3.1",
+    "core-js": "3.6.4",
+    "emoji-flags": "1.3.0",
+    "express": "^4.21.2",
+    "firebase": "12.3.0",
+    "firebase-functions": "6.0.0",
+    "hyphen": "1.10.4",
+    "imdb-api": "4.4.0",
+    "localforage": "1.10.0",
+    "localstorage-polyfill": "1.0.1",
+    "lodash.isequal": "4.5.0",
+    "marked": "16.0.0",
+    "ng-lazyload-image": "9.1.3",
+    "ngx-clipboard": "16.0.0",
+    "ngx-markdown": "20.1.0",
+    "rxjs": "7.8.0",
+    "tslib": "2.3.0",
+    "uuid": "8.3.2",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.2",
-    "@angular/cli": "^20.3.2",
-    "@angular/compiler-cli": "^20.3.1",
-    "@angular/language-service": "^20.3.1",
-    "@types/express": "^4.17.17",
+    "@angular/build": "20.3.5",
+    "@angular/cli": "20.3.5",
+    "@angular/compiler-cli": "20.3.1",
+    "@angular/language-service": "20.3.1",
+    "@types/express": "4.17.17",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "^4.6.0",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "22.14.1",
+    "jasmine-core": "4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "^2.0.0",
+    "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine-html-reporter": "1.7.0",
     "ts-node": "~4.1.0",
-    "typescript": "~5.9.2",
-    "webpack": "^5.0.0"
+    "typescript": "~5.9.0",
+    "webpack": "5.102.1"
   }
 }
