--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "20.3.6",
-    "@angular/animations": "20.3.6",
+    "@angular/animations": "^20.3.15",
     "@angular/cdk": "20.2.9",
-    "@angular/common": "20.3.6",
-    "@angular/compiler": "20.3.6",
-    "@angular/core": "20.3.6",
+    "@angular/common": "^20.3.15",
+    "@angular/compiler": "^20.3.15",
+    "@angular/core": "^20.3.15",
     "@angular/fire": "20.0.1",
-    "@angular/forms": "20.3.6",
+    "@angular/forms": "^20.3.15",
     "@angular/material": "20.2.9",
-    "@angular/platform-browser": "20.3.6",
-    "@angular/platform-browser-dynamic": "20.3.6",
-    "@angular/platform-server": "20.3.6",
-    "@angular/router": "20.3.6",
-    "@angular/service-worker": "20.3.6",
+    "@angular/platform-browser": "^20.3.15",
+    "@angular/platform-browser-dynamic": "^20.3.15",
+    "@angular/platform-server": "^20.3.15",
+    "@angular/router": "^20.3.15",
+    "@angular/service-worker": "^20.3.15",
     "@angular/ssr": "20.3.6",
     "@schematics/angular": "20.3.1",
     "@types/emoji-flags": "1.3.1",
@@ -50,9 +50,9 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "20.3.6",
-    "@angular/cli": "20.3.6",
-    "@angular/compiler-cli": "20.3.6",
+    "@angular/build": "^20.3.13",
+    "@angular/cli": "^20.3.13",
+    "@angular/compiler-cli": "^20.3.15",
     "@angular/language-service": "20.3.6",
     "@types/express": "4.17.17",
     "@types/jasmine": "~3.6.0",
